# EvenBetterNeteaseResolver

./: .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  config.toml  pyproject.toml  requirements.txt  test.py
.github/workflows/: TruffleHog-OSS.yml  build-docker.yml  pytest.yml
config/: config.toml
data/: cookie.example_list.json  cookie.example_object.json
docs/: api-docs.md  get-cookie.md
scripts/: convert_cookie.py  export_requirements.py
src/ebnr/: __init__.py  __main__.py  app.py  config.py  utils.py
src/ebnr/core/: __init__.py  client.py  cookie.py  excaptions.py  parser.py  types.py  utils.py
src/ebnr/core/api/: __init__.py  auth.py  song.py
src/ebnr/core/api/raw/: __init__.py  auth.py  song.py  user.py
src/ebnr/core/cryto/: eapi.py  linux.py  weapi.py
src/ebnr/router/: album.py  audio.py  info.py  meting.py  playlist.py  resolve.py  search.py  song.py  tracks.py
src/ebnr/services/async_resource/: __init__.py
src/ebnr/services/cache/: __init__.py  base_cache.py  memory_cache.py  redis_cache.py
src/ebnr/services/cached_api/: __init__.py  semaphore.py  song.py
src/ebnr/services/wrapped_api/: __init__.py  globals.py  semaphore.py  song.py
src/ebnr/utils/: http.py  lazy.py  netease.py  semaphore.py  ttl_value.py
tests/: utils.py
tests/api/: client.py  conftest.py  test_api.py
tests/core/: constants.py  test_cookie.py  test_song.py
tests/core/api/: test_song.py  test_user.py
tests/core/client/: test_song.py
