[project]
name = "EvenBetterNeteaseResolver"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "XiYang6666", email = "1782356858@qq.com" }]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx[http2]>=0.28.1",
    "cryptography>=45.0.5",
    "cachetools>=6.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "uvicorn ebnr:app --host 0.0.0.0"
dev = "uvicorn ebnr:app --host 0.0.0.0 --reload"
test = "pytest"
build-docker = "docker build . --tag xiyang6666/ebnr --build-arg PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple/"
push-docker = "docker push xiyang6666/ebnr"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
