[project]
name = "EvenBetterNeteaseResolver"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "XiYang6666", email = "1782356858@qq.com" }]
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "httpx[http2]>=0.28.1",
    "cryptography>=48.0.1",
    "pydantic-settings[toml]>=2.14.1",
    "lazy-object-proxy>=1.12.0",
    "redis>=8.0.0",
    "pydantic>=2.13.4",
]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0"]


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn ebnr:app --host 0.0.0.0"
dev = "uvicorn ebnr:app --host 0.0.0.0 --reload"
test = "pytest"
build-docker = "docker build . --tag xiyang6666/ebnr --build-arg PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple/"
push-docker = "docker push xiyang6666/ebnr"

[tool.ruff.lint]
extend-select = ["I"]

[tool.vercel]
entrypoint = "src.ebnr.app:app"
